tests/snapshots/conformance__n_structure_array_with_unclosed_string.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["asd]
stdout --- 
<empty>
stderr --- 
error: expected quote before end of input
 --> stdin:1:6
  |
1 | ["asd]
  |      ^
